[Klipper] Fix clipboard history management

Summary:
Fixed clearing the clipboard when clearing history
(bug #409366 caused by 3bd6ac34ed74e3b86bfb6b29818b726baf505f20)

Properly synchronize clipboard content and history
(deleting last item in history didn't clear the clipboard).

Keep last image in history even if we are ignoring images, but without preview
(so that we can still clear history, and the tooltip says truth about clipboard content).

Fixed tray icon tooltip text.

Do not scale small images up in clipboard Plasmoid.

BUG: 409366

{F7168503}

Test Plan:
Spectacle -> [Copy to Clipboard]
Paste into Dolphin (clipboard content)

Deleting single items from clipboard

Clearing the entire history

Reviewers: #plasma, #plasma_workspaces, ngraham, davidedmundson

Reviewed By: #plasma, #plasma_workspaces, ngraham, davidedmundson

Subscribers: GB_2, davidre, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D22684